syntax = "proto3";
package response;

import "google/protobuf/struct.proto";

message Response {
  string status = 1;
  string message = 2;
  google.protobuf.Struct data = 4;
}

message ResponseCommand {
  string status = 1;
  string message = 2;
  message ResponseCommandData {
    string request_id = 3;
    string websocket_notification_url = 4;
  }
  ResponseCommandData data = 3;
}